--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,6 +5,7 @@
 <p>Ξεχάσατε τον κωδικό σας;<br />Δώστε παρακάτω το e-mail σας για να σας σταλεί νέος</p>
 
 <form action="" method="post">
+{% csrf_token %}
 {{ form.email.errors }}
 <p><label for="id_email">Διεύθυνση e-mail: </label> {{ form.email }}<br />
 <input type="submit" value="αποστολή" /></p>
